@@ -1680,31 +1680,6 @@ name|inputFile
 argument_list|)
 argument_list|)
 decl_stmt|;
-try|try
-block|{
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-operator|(
-name|this
-operator|.
-name|N
-operator|*
-literal|10
-operator|)
-condition|;
-name|i
-operator|++
-control|)
-block|{
-comment|// Write out start row, total number of rows per client run: 1/10th of
-comment|// (R/N).
 name|int
 name|perClientRows
 init|=
@@ -1718,15 +1693,57 @@ operator|.
 name|N
 operator|)
 decl_stmt|;
+try|try
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10
+condition|;
+name|i
+operator|++
+control|)
+block|{
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+name|N
+condition|;
+name|j
+operator|++
+control|)
+block|{
 name|out
 operator|.
 name|println
 argument_list|(
 literal|"startRow="
 operator|+
+operator|(
+operator|(
+name|j
+operator|*
+name|perClientRows
+operator|)
+operator|+
+operator|(
 name|i
 operator|*
 name|perClientRows
+operator|)
+operator|)
 operator|+
 literal|", perClientRunRows="
 operator|+
@@ -1749,6 +1766,7 @@ operator|.
 name|N
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 finally|finally
@@ -3908,10 +3926,6 @@ expr_stmt|;
 if|if
 condition|(
 name|N
-operator|>
-literal|500
-operator|||
-name|N
 operator|<
 literal|1
 condition|)
@@ -3920,9 +3934,7 @@ throw|throw
 operator|new
 name|IllegalArgumentException
 argument_list|(
-literal|"Number of clients must be between "
-operator|+
-literal|"1 and 500."
+literal|"Number of clients must be> 1"
 argument_list|)
 throw|;
 block|}
