@@ -213,6 +213,8 @@ Release 0.20.0 - Unreleased
    HBASE-1286  Thrift should support next(nbRow) like functionality
                (Alex Newman via Stack)
    HBASE-1392  change how we build/configure lzocodec (Ryan Rawson via Stack)
+   HBASE-1397  Better distribution in the PerformanceEvaluation MapReduce
+               when rows run to the Billions
 
   OPTIMIZATIONS
 
